# TicketTriageSystem

./: Dockerfile  ai_resources.tf  airesources.tf  analytics_workspace.tf  container.tf  network_resources.tf  private_endpoints.tf  providers.tf  pyproject.toml  rai_policy.tf  resource_subscription.tf  terraform.tfvars  variables.tf
foundry/: foundry.py
